# cpp_cmake_templates

./: .gitignore  README.md
everything/: CMakeLists.txt  README.md
everything/bench/: CMakeLists.txt
everything/bench/src/: core_bench.cpp  example_bench.cpp
everything/src/: CMakeLists.txt
everything/src/project/core/: CMakeLists.txt
everything/test/src/: test.cpp
minimal/: CMakeLists.txt  README.md
minimal_with_deps/: CMakeLists.txt  README.md
specific/opencl/: .gitignore  CMakeLists.txt
specific/opencl/app/: main.cpp
specific/opencl/dev/src/: core.cpp
standard/: CMakeLists.txt  README.md
standard/app/: main.cpp
standard/bench/src/: core_bench.cpp
standard/src/: CMakeLists.txt  main.cpp
standard/src/project/core/: CMakeLists.txt
standard/src/project/core/inc/: core.h
standard/src/project/core/src/: core.cpp
standard/test/: CMakeLists.txt
standard/test/src/: test.cpp
standard_with_deps/: CMakeLists.txt  README.md
standard_with_deps/src/: main.cpp
v1/: README.md
v1/everything/: CMakeLists.txt  README.md
v1/everything/bench/: CMakeLists.txt
v1/everything/bench/src/: core_bench.cpp
v1/everything/src/: CMakeLists.txt  main.cpp
v1/everything/src/project/core/inc/: core.h
v1/minimal/: CMakeLists.txt  README.md
v1/minimal_with_deps/: CMakeLists.txt  README.md
v1/minimal_with_deps/src/project/core/: CMakeLists.txt
v1/standard/: CMakeLists.txt  README.md
v1/standard/src/: CMakeLists.txt  main.cpp
v1/standard/src/project/core/: CMakeLists.txt
v1/standard/test/: CMakeLists.txt
v1/standard_with_deps/: CMakeLists.txt  README.md
v1/standard_with_deps/src/project/core/src/: core.cpp
v1/standard_with_deps/test/src/: test.cpp
v2/: README.md
v2/opencl/: README.md
v2/opencl/app/: main.cpp
v2/standard/: CMakeLists.txt  README.md
v2/standard/app/: main.cpp
v2/standard/bench/: CMakeLists.txt
v2/standard/cmake/: init.cmake
v2/standard/dev/src/: core.cpp
v2/standard/src/dev/: core.cpp
v2/standard/test/: CMakeLists.txt
v2/standard/test/src/: test.cpp
